B-F Backup Sandbox 30.4.12/src/objects/Use_Case_Step__c.object
<CustomObject>
    <description>A Use Case Step is the incremental actions that, when joined in sequence, make up a Use Case.</description>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <label>Step Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Use Case Steps</relationshipLabel>
        <relationshipName>Use_Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Use Case Step</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Case Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>